[gd_scene load_steps=10 format=3 uid="uid://dcbur6yjwjw04"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_2k54x"]
[ext_resource type="FontFile" uid="uid://dle1gc17j1iy" path="res://assets/Bonus/kenvector_future_thin.ttf" id="2_p3a8r"]
[ext_resource type="AudioStream" uid="uid://b85m8wmmklla5" path="res://scenes/spaceship-cruising-ufo-7176.mp3" id="3_mdnc6"]
[ext_resource type="PackedScene" uid="uid://b57ou22h6ttgy" path="res://game_objects/player/player.tscn" id="3_s17ke"]
[ext_resource type="Texture2D" uid="uid://b7t1vw5wf08iq" path="res://scenes/purple.png" id="4_ietec"]
[ext_resource type="PackedScene" uid="uid://cpouksmmt6wpi" path="res://game_objects/enemy_spawner/enemy_spawner.tscn" id="7_fukia"]

[sub_resource type="LabelSettings" id="LabelSettings_2ymi7"]
font = ExtResource("2_p3a8r")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jbsco"]
font = ExtResource("2_p3a8r")
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bj3fc"]
font = ExtResource("2_p3a8r")
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_2k54x")
player_tscn = ExtResource("3_s17ke")
background_sound = ExtResource("3_mdnc6")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(268, 480.5)
scale = Vector2(2.125, 3.76172)
texture = ExtResource("4_ietec")

[node name="Control" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 539.0
offset_bottom = 961.0

[node name="LabelScore" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 198.0
offset_bottom = 79.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_2ymi7")
vertical_alignment = 1

[node name="LabelGameOver" type="Label" parent="Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -34.0
offset_right = 181.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_jbsco")
vertical_alignment = 1

[node name="LabelRestartInfo" type="Label" parent="Control/LabelGameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.5
offset_top = -8.5
offset_right = 97.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 0
text = "Press \"R\" to restart"
label_settings = SubResource("LabelSettings_bj3fc")

[node name="Player" parent="." instance=ExtResource("3_s17ke")]
position = Vector2(277, 834)

[node name="EnemySpawner" parent="." instance=ExtResource("7_fukia")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
